--- a/src/app/html/app-main.html
+++ b/src/app/html/app-main.html
@@ -100,6 +100,8 @@
 				</button>
 			</li>
 		</ul>
+
+		<div class="app__main-actions-mobile-backdrop"></div>
 	</div>
 
 	<div class="app__main-schedule schedule">
