fix: add event handlers to mobile menu buttons

--- a/src/app/html/app-main.html
+++ b/src/app/html/app-main.html
@@ -4,7 +4,7 @@
 			<button
 				class="actions-list-item__button button"
 				type="button"
-				data-button-action="services"
+				data-action-button="services"
 			>
 				Услуги
 			</button>
@@ -13,7 +13,7 @@
 			<button
 				class="actions-list-item__button button"
 				type="button"
-				data-button-action="masters"
+				data-action-button="masters"
 			>
 				Мастера
 			</button>
@@ -22,7 +22,7 @@
 			<button
 				class="actions-list-item__button button"
 				type="button"
-				data-button-action="createAppointment"
+				data-action-button="createAppointment"
 			>
 				Записаться
 			</button>
@@ -31,7 +31,7 @@
 			<button
 				class="actions-list-item__button button"
 				type="button"
-				data-button-action="reset"
+				data-action-button="reset"
 			>
 				Сбросить
 			</button>
@@ -40,7 +40,7 @@
 			<button
 				class="actions-list-item__button button"
 				type="button"
-				data-button-action="logout"
+				data-action-button="logout"
 			>
 				Выход
 			</button>
@@ -58,7 +58,7 @@
 				<button
 					class="actions-list-item__button button"
 					type="button"
-					data-button-action="services"
+					data-mobile-action-button="services"
 				>
 					Услуги
 				</button>
@@ -67,7 +67,7 @@
 				<button
 					class="actions-list-item__button button"
 					type="button"
-					data-button-action="masters"
+					data-mobile-action-button="masters"
 				>
 					Мастера
 				</button>
@@ -76,7 +76,7 @@
 				<button
 					class="actions-list-item__button button"
 					type="button"
-					data-button-action="createAppointment"
+					data-mobile-action-button="createAppointment"
 				>
 					Записаться
 				</button>
@@ -85,7 +85,7 @@
 				<button
 					class="actions-list-item__button button"
 					type="button"
-					data-button-action="reset"
+					data-mobile-action-button="reset"
 				>
 					Сбросить
 				</button>
@@ -94,7 +94,7 @@
 				<button
 					class="actions-list-item__button button"
 					type="button"
-					data-button-action="logout"
+					data-mobile-action-button="logout"
 				>
 					Выход
 				</button>
