--- a/src/app/html/app-modals.html
+++ b/src/app/html/app-modals.html
@@ -22,7 +22,7 @@
 		<button
 			class="modal__content-close-button"
 			type="button"
-			data-button-action="close"
+			data-action-button="close"
 		>
 			<svg
 				xmlns="http://www.w3.org/2000/svg"
@@ -171,7 +171,7 @@
 			<button
 				class="modal__content-close-button"
 				type="button"
-				data-button-action="close"
+				data-action-button="close"
 			>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
@@ -335,7 +335,7 @@
 			<button
 				class="modal__content-close-button"
 				type="button"
-				data-button-action="close"
+				data-action-button="close"
 			>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
