feat: create an appointment creation modal
Created a class to create an appointment. Created functionality for
opening and closing modals.

--- a/src/app/html/app-modals.html
+++ b/src/app/html/app-modals.html
@@ -6,14 +6,14 @@
 			<button
 				class="modal__content-confirm-button button button--black-text"
 				type="button"
-				data-button-confirm="yes"
+				data-confirm-button="yes"
 			>
 				Да
 			</button>
 			<button
 				class="modal__content-confirm-button button button--black-text"
 				type="button"
-				data-button-confirm="no"
+				data-confirm-button="no"
 			>
 				Нет
 			</button>
