feat!: start filling out the appointment modal
Added name and phone number inputs.
Added service/master select with current services/masters.

BREAKING_CHANGE: options in selects without value attributes.

--- a/src/css/app/_app-modals.scss
+++ b/src/css/app/_app-modals.scss
@@ -132,7 +132,8 @@
 		&-name,
 		&-surname,
 		&-experience,
-		&-price {
+		&-price,
+		&-phone {
 			input {
 				width: 100%;
 				height: calculate-from-font-size(2.5);
