--- a/src/app/html/app-modals.html
+++ b/src/app/html/app-modals.html
@@ -354,3 +354,69 @@
 	</div>
 	<div class="notification" data-notification="add-master"></div>
 </dialog>
+
+<dialog class="app__modal modal" data-modal="create-appointment">
+	<div class="modal__content-wrapper">
+		<form class="modal__content modal__content-form content-form" novalidate>
+			<h2 class="visually-hidden">Создать запись</h2>
+			<p class="content-form__field-name">
+				<label for="name-client" class="visually-hidden"> Введите имя </label>
+				<input
+					type="text"
+					name="name-client"
+					id="name-client"
+					placeholder="Имя"
+					required
+					pattern="^[а-яА-ЯёЁ]+$"
+					title="Имя должно состоять только из кириллицы (русский алфавит)."
+				/>
+				<span class="content-form__field-error form__field-error"></span>
+			</p>
+
+			<p class="content-form__field-phone">
+				<label for="phone-client" class="visually-hidden">
+					Введите номер телефона
+				</label>
+				<input
+					type="text"
+					name="phone-client"
+					id="phone-client"
+					placeholder="Номер телефона"
+					required
+					pattern="\d*"
+					title="Номер телефона должен быть без пробелов и состоять только из цифр."
+				/>
+				<span class="content-form__field-error form__field-error"></span>
+			</p>
+
+			<p>
+				<label for="service">Выберите услугу</label>
+				<select name="service" id="service"></select>
+			</p>
+
+			<p>
+				<label for="master">Выберите мастера</label>
+				<select name="master" id="master"></select>
+			</p>
+
+			<button
+				class="modal__content-close-button"
+				type="button"
+				data-action-button="close"
+			>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="50"
+					height="50"
+					viewBox="0 0 1024 1024"
+				>
+					<path
+						fill="#010101"
+						fill-rule="evenodd"
+						d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960S64 759.4 64 512S264.6 64 512 64m0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372s372-166.6 372-372s-166.6-372-372-372m128.013 198.826c.023.007.042.018.083.059l45.02 45.019c.04.04.05.06.058.083a.118.118 0 0 1 0 .07c-.007.022-.018.041-.059.082L557.254 512l127.861 127.862a.268.268 0 0 1 .05.06l.009.023a.118.118 0 0 1 0 .07c-.007.022-.018.041-.059.082l-45.019 45.02c-.04.04-.06.05-.083.058a.118.118 0 0 1-.07 0c-.022-.007-.041-.018-.082-.059L512 557.254L384.14 685.115c-.042.041-.06.052-.084.059a.118.118 0 0 1-.07 0c-.022-.007-.041-.018-.082-.059l-45.02-45.019a.199.199 0 0 1-.058-.083a.118.118 0 0 1 0-.07c.007-.022.018-.041.059-.082L466.745 512l-127.86-127.86a.268.268 0 0 1-.05-.061l-.009-.023a.118.118 0 0 1 0-.07c.007-.022.018-.041.059-.082l45.019-45.02c.04-.04.06-.05.083-.058a.118.118 0 0 1 .07 0c.022.007.041.018.082.059L512 466.745l127.862-127.86c.04-.041.06-.052.083-.059a.118.118 0 0 1 .07 0Z"
+					/>
+				</svg>
+			</button>
+		</form>
+	</div>
+</dialog>
