--- a/src/css/app/_app-modals.scss
+++ b/src/css/app/_app-modals.scss
@@ -163,7 +163,8 @@
 			}
 		}
 
-		&-surname {
+		&-surname,
+		&-phone {
 			margin-top: calculate-from-font-size(0.625) !important;
 		}
 
@@ -240,6 +241,34 @@
 
 				&--is-open {
 					display: flex;
+				}
+			}
+		}
+
+		&-select {
+			margin-top: calculate-from-font-size(0.625) !important;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			gap: 10px;
+
+			label {
+				width: calculate-from-font-size(3.875);
+			}
+
+			select {
+				text-align: center;
+				padding: 0 calculate-from-font-size(0.625);
+				flex-grow: 1;
+				cursor: pointer;
+				height: calc(var(--font-size) * 2.5);
+				border: 2px solid var(--color-gray-dark);
+				border-radius: var(--border-radius-small);
+				transition: border-color var(--transition-hover-duration) ease 0s;
+
+				&:focus {
+					outline: none;
+					border: 2px solid var(--color-accent);
 				}
 			}
 		}
