feat: replace native selects with custom ones
Replaced native selects in the appointment creation modal with custom
ones.

--- a/src/app/html/app-modals.html
+++ b/src/app/html/app-modals.html
@@ -389,39 +389,81 @@
 				<span class="content-form__field-error form__field-error"></span>
 			</p>
 
-			<p class="content-form__field-select">
-				<label for="service">Услуга:</label>
-				<select name="service" id="service"></select>
-			</p>
+			<div class="content-form__field-select" data-custom-select="service">
+				<span class="content-form__field-select-label">Услуга:</span>
+				<button
+					class="content-form__field-select-button button"
+					type="button"
+				></button>
+				<ul class="content-form__field-select-list"></ul>
+			</div>
 
-			<p class="content-form__field-select">
-				<label for="master">Мастер:</label>
-				<select name="master" id="master"></select>
-			</p>
+			<div class="content-form__field-select" data-custom-select="master">
+				<span class="content-form__field-select-label">Мастер:</span>
+				<button
+					class="content-form__field-select-button button"
+					type="button"
+				></button>
+				<ul class="content-form__field-select-list"></ul>
+			</div>
 
-			<p class="content-form__field-select">
-				<label for="date">Дата:</label>
-				<select name="date" id="date"></select>
-			</p>
+			<div class="content-form__field-select" data-custom-select="date">
+				<span class="content-form__field-select-label">Дата:</span>
+				<button
+					class="content-form__field-select-button button"
+					type="button"
+				></button>
+				<ul class="content-form__field-select-list"></ul>
+			</div>
 
-			<p class="content-form__field-select">
-				<label for="time">Время:</label>
-				<select name="time" id="time">
-					<option value="09-00">09:00</option>
-					<option value="10-00">10:00</option>
-					<option value="11-00">11:00</option>
-					<option value="12-00">12:00</option>
-					<option value="13-00">13:00</option>
-					<option value="14-00">14:00</option>
-					<option value="15-00">15:00</option>
-					<option value="16-00">16:00</option>
-					<option value="17-00">17:00</option>
-					<option value="18-00">18:00</option>
-					<option value="19-00">19:00</option>
-					<option value="20-00">20:00</option>
-					<option value="21-00">21:00</option>
-				</select>
-			</p>
+			<div class="content-form__field-select" data-custom-select="time">
+				<span class="content-form__field-select-label">Время:</span>
+				<button
+					class="content-form__field-select-button button"
+					type="button"
+				></button>
+				<ul class="content-form__field-select-list">
+					<li class="content-form__field-select-list-item" data-value="09-00">
+						09:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="10-00">
+						10:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="11-00">
+						11:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="12-00">
+						12:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="13-00">
+						13:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="14-00">
+						14:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="15-00">
+						15:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="16-00">
+						16:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="17-00">
+						17:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="18-00">
+						18:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="19-00">
+						19:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="20-00">
+						20:00
+					</li>
+					<li class="content-form__field-select-list-item" data-value="21-00">
+						21:00
+					</li>
+				</ul>
+			</div>
 
 			<button
 				class="content-form__button button button--black-text"
