feat: add a new modal for appointment
When you click on a appointment in the table, a modal window opens
with information about the appointment and a delete button.

Fixed some issues and removed double searches.

--- a/src/app/html/app-main.html
+++ b/src/app/html/app-main.html
@@ -147,145 +147,145 @@
 			<tbody>
 				<tr>
 					<th class="schedule-row-header">09:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="09-00"><div></div></td>
+					<td data-table-time="09-00"><div></div></td>
+					<td data-table-time="09-00"><div></div></td>
+					<td data-table-time="09-00"><div></div></td>
+					<td data-table-time="09-00"><div></div></td>
+					<td data-table-time="09-00"><div></div></td>
+					<td data-table-time="09-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">10:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="10-00"><div></div></td>
+					<td data-table-time="10-00"><div></div></td>
+					<td data-table-time="10-00"><div></div></td>
+					<td data-table-time="10-00"><div></div></td>
+					<td data-table-time="10-00"><div></div></td>
+					<td data-table-time="10-00"><div></div></td>
+					<td data-table-time="10-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">11:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="11-00"><div></div></td>
+					<td data-table-time="11-00"><div></div></td>
+					<td data-table-time="11-00"><div></div></td>
+					<td data-table-time="11-00"><div></div></td>
+					<td data-table-time="11-00"><div></div></td>
+					<td data-table-time="11-00"><div></div></td>
+					<td data-table-time="11-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">12:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="12-00"><div></div></td>
+					<td data-table-time="12-00"><div></div></td>
+					<td data-table-time="12-00"><div></div></td>
+					<td data-table-time="12-00"><div></div></td>
+					<td data-table-time="12-00"><div></div></td>
+					<td data-table-time="12-00"><div></div></td>
+					<td data-table-time="12-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">13:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="13-00"><div></div></td>
+					<td data-table-time="13-00"><div></div></td>
+					<td data-table-time="13-00"><div></div></td>
+					<td data-table-time="13-00"><div></div></td>
+					<td data-table-time="13-00"><div></div></td>
+					<td data-table-time="13-00"><div></div></td>
+					<td data-table-time="13-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">14:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="14-00"><div></div></td>
+					<td data-table-time="14-00"><div></div></td>
+					<td data-table-time="14-00"><div></div></td>
+					<td data-table-time="14-00"><div></div></td>
+					<td data-table-time="14-00"><div></div></td>
+					<td data-table-time="14-00"><div></div></td>
+					<td data-table-time="14-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">15:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="15-00"><div></div></td>
+					<td data-table-time="15-00"><div></div></td>
+					<td data-table-time="15-00"><div></div></td>
+					<td data-table-time="15-00"><div></div></td>
+					<td data-table-time="15-00"><div></div></td>
+					<td data-table-time="15-00"><div></div></td>
+					<td data-table-time="15-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">16:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="16-00"><div></div></td>
+					<td data-table-time="16-00"><div></div></td>
+					<td data-table-time="16-00"><div></div></td>
+					<td data-table-time="16-00"><div></div></td>
+					<td data-table-time="16-00"><div></div></td>
+					<td data-table-time="16-00"><div></div></td>
+					<td data-table-time="16-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">17:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="17-00"><div></div></td>
+					<td data-table-time="17-00"><div></div></td>
+					<td data-table-time="17-00"><div></div></td>
+					<td data-table-time="17-00"><div></div></td>
+					<td data-table-time="17-00"><div></div></td>
+					<td data-table-time="17-00"><div></div></td>
+					<td data-table-time="17-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">18:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="18-00"><div></div></td>
+					<td data-table-time="18-00"><div></div></td>
+					<td data-table-time="18-00"><div></div></td>
+					<td data-table-time="18-00"><div></div></td>
+					<td data-table-time="18-00"><div></div></td>
+					<td data-table-time="18-00"><div></div></td>
+					<td data-table-time="18-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">19:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="19-00"><div></div></td>
+					<td data-table-time="19-00"><div></div></td>
+					<td data-table-time="19-00"><div></div></td>
+					<td data-table-time="19-00"><div></div></td>
+					<td data-table-time="19-00"><div></div></td>
+					<td data-table-time="19-00"><div></div></td>
+					<td data-table-time="19-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">20:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="20-00"><div></div></td>
+					<td data-table-time="20-00"><div></div></td>
+					<td data-table-time="20-00"><div></div></td>
+					<td data-table-time="20-00"><div></div></td>
+					<td data-table-time="20-00"><div></div></td>
+					<td data-table-time="20-00"><div></div></td>
+					<td data-table-time="20-00"><div></div></td>
 				</tr>
 
 				<tr>
 					<th class="schedule-row-header">21:00</th>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
+					<td data-table-time="21-00"><div></div></td>
+					<td data-table-time="21-00"><div></div></td>
+					<td data-table-time="21-00"><div></div></td>
+					<td data-table-time="21-00"><div></div></td>
+					<td data-table-time="21-00"><div></div></td>
+					<td data-table-time="21-00"><div></div></td>
+					<td data-table-time="21-00"><div></div></td>
 				</tr>
 			</tbody>
 		</table>
