--- a/src/app/html/app-modals.html
+++ b/src/app/html/app-modals.html
@@ -358,7 +358,7 @@
 <dialog class="app__modal modal" data-modal="create-appointment">
 	<div class="modal__content-wrapper">
 		<form class="modal__content modal__content-form content-form" novalidate>
-			<h2 class="visually-hidden">Создать запись</h2>
+			<h2 class="visually-hidden">Создание записи</h2>
 			<p class="content-form__field-name">
 				<label for="name-client" class="visually-hidden"> Введите имя </label>
 				<input
