--- a/src/css/app/_app-main.scss
+++ b/src/css/app/_app-main.scss
@@ -242,8 +242,8 @@
 
 	&-appointment {
 		div {
-			padding: 10px;
-			margin: 0 auto;
+			padding: 5% 10px;
+			text-align: center;
 			background-color: var(--color-accent);
 			overflow: hidden;
 			white-space: nowrap;
