--- a/src/app/html/app-aside.html
+++ b/src/app/html/app-aside.html
@@ -1,7 +1,7 @@
 <aside class="app__aside aside">
-	<div class="aside__contacts"></div>
+	<div class="aside__contacts fade-in-top"></div>
 
-	<div class="aside__time-and-date time-and-date">
+	<div class="aside__time-and-date time-and-date fade-in-top">
 		<div class="time-and-date__time">
 			<span class="time-and-date__time-hours"></span> :
 			<span class="time-and-date__time-minutes"></span>
