--- a/src/app/html/app-main.html
+++ b/src/app/html/app-main.html
@@ -1,5 +1,5 @@
 <main class="app__main">
-	<ul class="app__main-actions actions actions-list">
+	<ul class="app__main-actions actions actions-list fade-in-left">
 		<li class="actions-list-item">
 			<button
 				class="actions-list-item__button button"
@@ -104,7 +104,7 @@
 		<div class="app__main-actions-mobile-backdrop"></div>
 	</div>
 
-	<div class="app__main-schedule schedule">
+	<div class="app__main-schedule schedule fade-in-right">
 		<table>
 			<caption class="visually-hidden">
 				Расписание записей
